# opencv_demo

./: .gitignore  README.md
CxCore/mask/: CMakeLists.txt  main.cpp
CxCore/mat/: main.cpp
CxCore/scan_image/: CMakeLists.txt  main.cpp
camera/: CMakeLists.txt  main.cpp
hand_detect/: CMakeLists.txt  Makefile  main.cpp
mat/: CMakeLists.txt  main.cpp
read_image/: CMakeLists.txt  main.cpp
read_video/: CMakeLists.txt  main.cpp
windows/: CMakeLists.txt  main.cpp
